--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-favicon": "^2.0.1",
     "express-session": "^1.16.1",
@@ -18,8 +19,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11",
-    "sqlite3": "^4.0.9"
+    "pg": "^7.12.1",
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
