--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bhive-product-register",
-  "version": "1.2.0",
+  "name": "harvesthub",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
